# metsysd

./: .gitignore  Cargo.toml  README.md
.github/: release-drafter.yml
.github/workflows/: drafter.yml  main.yml  release.yml
src/: main.rs  manager.rs  service.rs
