[package]
name = "metsysd"
description = "Metsysd is a simple systemd service generator, because we never remember systemd service syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive", "env"] }
env_logger = "0.9.1"
home = "0.5.4"
log = "0.4.17"
systemctl = "0.1.8"
